added footer changes

--- a/app/index.html
+++ b/app/index.html
@@ -35,17 +35,17 @@
 	<div class="header" style="background-image: url(img/bg2.jpg)">
 		<div class="main-holder">
 			<div class="title-section">
-                <div class="wrap-title hidden-desctop">
-                    <h1 class="title">ברוח עכשווית עם המורים הטובים בארץ</h1>
-                    <span>בואו לקחת חלק בלימודי מחול מובילים</span>
-                </div>
-                <div class="signature">
-                    <img src="img/logo2.png" alt="logo">
-                </div>
-                <div class="wrap-title hidden-mobile">
-                    <h1 class="title">בואו לקחת חלק בלימודי מחול מובילים</h1>
-                    <span>ברוח עכשווית עם המורים הטובים בארץ</span>
-                </div>
+                <!--<div class="wrap-title hidden-desctop">-->
+                    <!--<h1 class="title">ברוח עכשווית עם המורים הטובים בארץ</h1>-->
+                    <!--<span>בואו לקחת חלק בלימודי מחול מובילים</span>-->
+                <!--</div>-->
+				<div class="signature">
+					<img src="img/logo3.png" alt="logo">
+				</div>
+                <!--<div class="wrap-title hidden-mobile">-->
+                    <!--<h1 class="title">בואו לקחת חלק בלימודי מחול מובילים</h1>-->
+                    <!--<span>ברוח עכשווית עם המורים הטובים בארץ</span>-->
+                <!--</div>-->
 			</div>
 
 
@@ -145,40 +145,40 @@
 				<ul class="slick-slider">
 					<li>
 						<div class="wrap-img-footer">
-							<img src="img/image-puple.png" alt="">
+							<img src="img/image-puple1.png" alt="">
 						</div>
-						<span>שם מורה</span>
+						<span>הילה אסרף</span>
 					</li>
 					<li>
 						<div class="wrap-img-footer">
-							<img src="img/image-puple.png" alt="">
+							<img src="img/image-puple2.png" alt="">
 						</div>
-						<span>שם מורה</span>
+						<span>ליטל</span>
 					</li>
 					<li>
 						<div class="wrap-img-footer">
-							<img src="img/image-puple.png" alt="">
+							<img src="img/image-puple3.png" alt="">
 						</div>
-						<span>שם מורה</span>
+						<span>מאור שיר צוריאל</span>
 					</li>
 					<li>
 						<div class="wrap-img-footer">
-							<img src="img/image-puple.png" alt="">
+							<img src="img/image-puple4.png" alt="">
 						</div>
-						<span>שם מורה</span>
+						<span>מור מרכוס</span>
 					</li>
 					<li>
 						<div class="wrap-img-footer">
-							<img src="img/image-puple.png" alt="">
+							<img src="img/image-puple5.png" alt="">
 						</div>
-						<span>שם מורה</span>
+						<span>שיינה היידי</span>
 					</li>
-					<li>
-						<div class="wrap-img-footer">
-							<img src="img/image-puple.png" alt="">
-						</div>
-						<span>שם מורה</span>
-					</li>
+					<!--<li>-->
+						<!--<div class="wrap-img-footer">-->
+							<!--<img src="img/image-puple.png" alt="">-->
+						<!--</div>-->
+						<!--<span>שם מורה</span>-->
+					<!--</li>-->
 				</ul>
 
 			</div>
@@ -188,15 +188,24 @@
 			<!--</div>-->
 		</div>
 		<div class="wrap-footer">
-			<div class="signature">
-				<img src="img/logo-footer.png" alt="logo">
-			</div>
+			<!--<div class="signature">-->
+				<!--<img src="img/logo-footer.png" alt="logo">-->
+			<!--</div>-->
 			<div class="footer">
-				<div class="main-holder">
-					<p>טלפון 03-9643477 • פקס 03-9698764 <span class="hidden-mobile">•</span> כתובת: רח' הרצל 85, ראשון לציון</p>
-					<p>info@nadine-animato.com <span class="hidden-mobile">•</span> Bommer@netvision.net.il</p>
+				<!--<div class="main-holder">-->
+					<!--<p>טלפון 03-9643477 • פקס 03-9698764 <span class="hidden-mobile">•</span> כתובת: רח' הרצל 85, ראשון לציון</p>-->
+					<!--<p>info@nadine-animato.com <span class="hidden-mobile">•</span> Bommer@netvision.net.il</p>-->
+				<!--</div>-->
+				<div class="wrap-img">
+					<a href="#">
+						<img src="img/logo-footer2.png" alt="logo">
+					</a>
 				</div>
-
+				<div class="wrap-text">
+					<h4>נדין - בית למחול עכשווי</h4>
+					<p>טלפון 03-9643477 • פקס 03-9698764 • כתובת: רח' הרצל 85, ראשון לציון</p>
+					<p>info@nadine-animato.com • Bommer@netvision.net.il</p>
+				</div>
 			</div>
 		</div>
 
